--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     margin-left: 70px;
     margin-right: 70px;
     letter-spacing: 0px;
-    font-family: 'Bebas';
+    font-family: 'bebas-neue', sans-serif;;
 }
 
 .location {
