--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     margin-left: 70px;
     margin-right: 70px;
     letter-spacing: 0px;
-    font-family: 'bebas-neue', sans-serif;;
+    font-family: 'bebas-neue', sans-serif;
 }
 
 .location {
@@ -25,7 +25,7 @@
     margin-left: 70px;
     margin-right: 70px;
     letter-spacing: 0px;
-    font-family: 'bebas-neue';
+    font-family: 'bebas-neue', sans-serif;
 }
 
 .skillhead {
@@ -37,7 +37,7 @@
     margin-left: 0px;
     margin-right: 0px;
     letter-spacing: 0px;
-    font-family: 'bebas-neue';
+    font-family: 'bebas-neue', sans-serif;
 }
 
 .innercard {
@@ -226,7 +226,7 @@
         margin-left: 25px;
         margin-right: 25px;
         letter-spacing: 0px;
-        font-family: 'bebas-neue';
+        font-family: 'bebas-neue', sans-serif;
     }
 
     .location {
@@ -238,7 +238,7 @@
         margin-left: 25px;
         margin-right: 25px;
         letter-spacing: 0px;
-        font-family: 'bebas-neue';
+        font-family: 'bebas-neue', sans-serif;
     }
 
     .profile {
@@ -260,7 +260,7 @@
         margin-left: 0px;
         margin-right: 0px;
         letter-spacing: 0px;
-        font-family: 'bebas-neue';
+        font-family: 'bebas-neue', sans-serif;
     }
 
     .list {
