--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: "Poppins";
+    font-family: 'Poppins';
     src: url('./fonts/Poppins-Black.ttf') format('truetype'),
          url('./fonts/Poppins-BlackItalic.ttf') format('truetype'),
          url('./fonts/Poppins-Bold.ttf') format('truetype'),
