--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'Poppins';
     src: url('./fonts/Poppins-Black.ttf') format('truetype'),
-         url('./fonts/Poppins-BlackItalic.ttf') format('truetype'),
+         /* url('./fonts/Poppins-BlackItalic.ttf') format('truetype'),
          url('./fonts/Poppins-Bold.ttf') format('truetype'),
          url('./fonts/Poppins-BoldItalic.ttf') format('truetype'),
          url('./fonts/Poppins-ExtraBold.ttf') format('truetype'),
@@ -17,13 +17,13 @@
          url('./fonts/Poppins-SemiBold.ttf') format('truetype'),
          url('./fonts/Poppins-SemiBoldItalic.ttf') format('truetype'),
          url('./fonts/Poppins-Thin.ttf') format('truetype'),
-         url('./fonts/Poppins-ThinItalic.ttf') format('truetype');
+         url('./fonts/Poppins-ThinItalic.ttf') format('truetype'); */
 }
 
-/* @font-face {
+@font-face {
     font-family: 'Bebas';
     src: url('./fonts/BEBAS.ttf') format('truetype');
-} */
+}
 
 .body-area {
     max-width: 1232px;
