--- a/style.css
+++ b/style.css
@@ -1,23 +1,127 @@
 @font-face {
-    font-family: 'Poppins';
-    src: url('./fonts/Poppins-Black.ttf') format('truetype'),
-         /* url('./fonts/Poppins-BlackItalic.ttf') format('truetype'),
-         url('./fonts/Poppins-Bold.ttf') format('truetype'),
-         url('./fonts/Poppins-BoldItalic.ttf') format('truetype'),
-         url('./fonts/Poppins-ExtraBold.ttf') format('truetype'),
-         url('./fonts/Poppins-ExtraBoldItalic.ttf') format('truetype'),
-         url('./fonts/Poppins-ExtraLight.ttf') format('truetype'),
-         url('./fonts/Poppins-ExtraLightItalic.ttf') format('truetype'),
-         url('./fonts/Poppins-Light.ttf') format('truetype'),
-         url('./fonts/Poppins-LightItalic.ttf') format('truetype'),
-         url('./fonts/Poppins-Medium.ttf') format('truetype'),
-         url('./fonts/Poppins-MediumItalic.ttf') format('truetype'),
-         url('./fonts/Poppins-Regular.ttf') format('truetype'),
-         url('./fonts/Poppins-RegularItalic.ttf') format('truetype'),
-         url('./fonts/Poppins-SemiBold.ttf') format('truetype'),
-         url('./fonts/Poppins-SemiBoldItalic.ttf') format('truetype'),
-         url('./fonts/Poppins-Thin.ttf') format('truetype'),
-         url('./fonts/Poppins-ThinItalic.ttf') format('truetype'); */
+    font-family: 'Poppins',
+    url('./fonts/Poppins-Black.ttf') format('truetype');
+    font-weight: 900;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Poppins',
+    url('./fonts/Poppins-BlackItalic.ttf') format('truetype');
+    font-weight: 900;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Poppins',
+    url('./fonts/Poppins-Bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Poppins',
+    url('./fonts/Poppins-BoldItalic.ttf') format('truetype');
+    font-weight: 700;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Poppins',
+    url('./fonts/Poppins-ExtraBold.ttf') format('truetype');
+    font-weight: 800;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Poppins',
+    url('./fonts/Poppins-ExtraBoldItalic.ttf') format('truetype');
+    font-weight: 800;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Poppins',
+    url('./fonts/Poppins-ExtraLight.ttf') format('truetype');
+    font-weight: 200;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Poppins',
+    url('./fonts/Poppins-ExtraLightItalic.ttf') format('truetype');
+    font-weight: 200;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Poppins',
+    url('./fonts/Poppins-Light.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Poppins',
+    url('./fonts/Poppins-LightItalic.ttf') format('truetype');
+    font-weight: 300;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Poppins',
+    url('./fonts/Poppins-Medium.ttf') format('truetype');
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Poppins',
+    url('./fonts/Poppins-MediumItalic.ttf') format('truetype');
+    font-weight: 500;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Poppins',
+    url('./fonts/Poppins-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Poppins',
+    url('./fonts/Poppins-RegularItalic.ttf') format('truetype');
+    font-weight: 400;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Poppins',
+    url('./fonts/Poppins-SemiBold.ttf') format('truetype');
+    font-weight: 600;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Poppins',
+    url('./fonts/Poppins-SemiBoldItalic.ttf') format('truetype');
+    font-weight: 600;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Poppins',
+    url('./fonts/Poppins-Thin.ttf') format('truetype');
+    font-weight: 100;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Poppins',
+    url('./fonts/Poppins-ThinItalic.ttf') format('truetype');
+    font-weight: 100;
+    font-style: italic;
 }
 
 @font-face {
