--- a/style.css
+++ b/style.css
@@ -124,10 +124,10 @@
     font-style: italic;
 }
 
-@font-face {
+/* @font-face {
     font-family: 'Bebas';
     src: url('./fonts/BEBAS.ttf') format('truetype');
-}
+} */
 
 .body-area {
     max-width: 1232px;
