--- a/style.css
+++ b/style.css
@@ -6,119 +6,119 @@
 }
 
 @font-face {
-    font-family: 'Poppins1',
+    font-family: 'Poppins',
     url('./fonts/Poppins-BlackItalic.ttf') format('truetype');
     font-weight: 900;
     font-style: italic;
 }
 
 @font-face {
-    font-family: 'Poppins2',
+    font-family: 'Poppins',
     url('./fonts/Poppins-Bold.ttf') format('truetype');
     font-weight: 700;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'Poppins3',
+    font-family: 'Poppins',
     url('./fonts/Poppins-BoldItalic.ttf') format('truetype');
     font-weight: 700;
     font-style: italic;
 }
 
 @font-face {
-    font-family: 'Poppins4',
+    font-family: 'Poppins',
     url('./fonts/Poppins-ExtraBold.ttf') format('truetype');
     font-weight: 800;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'Poppins5',
+    font-family: 'Poppins',
     url('./fonts/Poppins-ExtraBoldItalic.ttf') format('truetype');
     font-weight: 800;
     font-style: italic;
 }
 
 @font-face {
-    font-family: 'Poppins6',
+    font-family: 'Poppins',
     url('./fonts/Poppins-ExtraLight.ttf') format('truetype');
     font-weight: 200;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'Poppins7',
+    font-family: 'Poppins',
     url('./fonts/Poppins-ExtraLightItalic.ttf') format('truetype');
     font-weight: 200;
     font-style: italic;
 }
 
 @font-face {
-    font-family: 'Poppins8',
+    font-family: 'Poppins',
     url('./fonts/Poppins-Light.ttf') format('truetype');
     font-weight: 300;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'Poppins9',
+    font-family: 'Poppins',
     url('./fonts/Poppins-LightItalic.ttf') format('truetype');
     font-weight: 300;
     font-style: italic;
 }
 
 @font-face {
-    font-family: 'Poppins10',
+    font-family: 'Poppins',
     url('./fonts/Poppins-Medium.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'Poppins11',
+    font-family: 'Poppins',
     url('./fonts/Poppins-MediumItalic.ttf') format('truetype');
     font-weight: 500;
     font-style: italic;
 }
 
 @font-face {
-    font-family: 'Poppins12',
+    font-family: 'Poppins',
     url('./fonts/Poppins-Regular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'Poppins13',
+    font-family: 'Poppins',
     url('./fonts/Poppins-RegularItalic.ttf') format('truetype');
     font-weight: 400;
     font-style: italic;
 }
 
 @font-face {
-    font-family: 'Poppins14',
+    font-family: 'Poppins',
     url('./fonts/Poppins-SemiBold.ttf') format('truetype');
     font-weight: 600;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'Poppins15',
+    font-family: 'Poppins',
     url('./fonts/Poppins-SemiBoldItalic.ttf') format('truetype');
     font-weight: 600;
     font-style: italic;
 }
 
 @font-face {
-    font-family: 'Poppins16',
+    font-family: 'Poppins',
     url('./fonts/Poppins-Thin.ttf') format('truetype');
     font-weight: 100;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'Poppins17',
+    font-family: 'Poppins',
     url('./fonts/Poppins-ThinItalic.ttf') format('truetype');
     font-weight: 100;
     font-style: italic;
