--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i&display=swap');
+
 /* @font-face {
     font-family: 'Poppins';
     src: url('./fonts/Poppins-Black.ttf') format('truetype'),
