--- a/style.css
+++ b/style.css
@@ -146,12 +146,12 @@
     font-style: italic;
 } */
 
-@font-face {
+/* @font-face {
     font-family: 'Poppins',
     url('./fonts/Poppins-Regular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
-}
+} */
 
 /* @font-face {
     font-family: 'Bebas';
