--- a/style.css
+++ b/style.css
@@ -146,17 +146,10 @@
     font-style: italic;
 } */
 
-/* @font-face {
-    font-family: 'Poppins',
-    url('./fonts/Poppins-Regular.ttf') format('truetype');
-    font-weight: 400;
-    font-style: normal;
-} */
-
-/* @font-face {
+@font-face {
     font-family: 'Bebas';
     src: url('./fonts/BEBAS.ttf') format('truetype');
-} */
+}
 
 .body-area {
     max-width: 1232px;
