--- a/project.css
+++ b/project.css
@@ -89,8 +89,8 @@
 .projectcard-content {
     width: 100%;
     min-height: 104px;
-    background-color: #fff;
-    border-top: 1px solid #E9E9EB;
+    background-color: #fbfbfb;
+    border-top: 1px solid #e0e5e9;
     border-bottom-right-radius: 4px;
     border-bottom-left-radius: 4px;
     padding: 1rem 2rem;
