--- a/project.css
+++ b/project.css
@@ -234,7 +234,7 @@ small {
         width: 100%;
         background-color: #fff;
         transition: opacity .2s ease;
-        /* background-position: center center; */
+        background-position: top center;
         background-repeat: no-repeat;
         background-size: cover;
 
