--- a/style.css
+++ b/style.css
@@ -153,8 +153,10 @@
 
 :root {
     --card-color: #fff;
+    --projectcard-color: #fbfbfb;
     --secondary-color: #536390;
     --font-color: #6c80a4;
+    --cardfont-color: #5b5b5b;
     --bg-color: #f1f3f5;
     --heading-color: #292922;
     --box-shadow: 0 6px 8px rgba(102, 119, 136, .03), 0 1px 2px rgba(102, 119, 136, .3);
@@ -162,8 +164,10 @@
 
 [data-theme="dark"] {
     --card-color: #202229;
+    --projectcard-color: #282b33;
     --secondary-color: #818cab;
     --font-color: #eeeeff;
+    --cardfont-color: #b9bac3;
     --bg-color: #17191f;
     --heading-color: #818cab;
     --box-shadow: 0 6px 8px rgba(#747474, 0.09), 0 1px 2px rgba(#747474, 0.09);
@@ -238,31 +242,31 @@
 }
 
 .red {
-    background: #DB4437;
+    background: linear-gradient(0deg, rgba(32,34,41,1) 50%, rgba(219,68,55,1) 50%);
 }
 
 .blue {
-    background: #4285F4;
+    background: linear-gradient(0deg, rgba(32,34,41,1) 50%, rgba(66,133,244,1) 50%);
 }
 
 .yellow {
-    background: #F4B400;
+    background: linear-gradient(0deg, rgba(32,34,41,1) 50%, rgba(244,180,0,1) 50%);
 }
 
 .green {
-    background: #0F9D58;
+    background: linear-gradient(0deg, rgba(32,34,41,1) 50%, rgba(15,157,88,1) 50%);
 }
 
 .black {
-    background: #000000;
+    background: linear-gradient(0deg, rgba(32,34,41,1) 50%, rgba(0,0,0,1) 50%);
 }
 
 .grey {
-    background: #6c80a4;
+    background: linear-gradient(0deg, rgba(32,34,41,1) 50%, rgba(108,128,164,1) 50%);
 }
 
 .gold {
-    background: #ccb65e;
+    background: linear-gradient(0deg, rgba(40,43,51,1) 50%, rgba(204,182,94,1) 50%);
 }
 
 .text-green {
@@ -286,7 +290,7 @@
 }
 
 .text-grey {
-    color: #5b5b5b;
+    color: var(--font-color);
 }
 
 .center {
