--- a/style.css
+++ b/style.css
@@ -173,6 +173,15 @@
     --box-shadow: 0 6px 8px rgba(#747474, 0.09), 0 1px 2px rgba(#747474, 0.09);
 }
 
+[data-emoji] {
+  font-style: normal;
+  font-weight: normal;
+}
+[data-emoji]:before {
+  content: attr(data-emoji);
+  margin-right: .125em;
+}
+
 .body-area {
     max-width: 1232px;
     margin: 0 auto;
