--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@
     --cardfont-color: #b9bac3;
     --bg-color: #17191f;
     --heading-color: #818cab;
-    --box-shadow: 0 6px 8px rgba(#747474, 0.09), 0 1px 2px rgba(#747474, 0.09);
+    --box-shadow: 0 6px 8px rgba(97, 97, 97, 0.35), 0 1px 2px rgba(#747474, 0.09);
 }
 
 [data-emoji] {
