--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@
     --cardfont-color: #b9bac3;
     --bg-color: #17191f;
     --heading-color: #818cab;
-    --box-shadow: 0 6px 8px rgba(97, 97, 97, 0.35), 0 1px 2px rgba(97, 97, 97, 0.35);
+    --box-shadow: 0 6px 8px rgba(102, 119, 136, .03), 0 1px 2px rgba(102, 119, 136, .3);
 }
 
 [data-emoji] {
@@ -251,31 +251,31 @@
 }
 
 .red {
-    background: linear-gradient(0deg, rgba(32,34,41,1) 50%, rgba(219,68,55,1) 50%);
+    background: linear-gradient(0deg, rgba(32,34,41,1) 90%, rgba(219,68,55,1) 10%);
 }
 
 .blue {
-    background: linear-gradient(0deg, rgba(32,34,41,1) 50%, rgba(66,133,244,1) 50%);
+    background: linear-gradient(0deg, rgba(32,34,41,1) 90%, rgba(66,133,244,1) 10%);
 }
 
 .yellow {
-    background: linear-gradient(0deg, rgba(32,34,41,1) 50%, rgba(244,180,0,1) 50%);
+    background: linear-gradient(0deg, rgba(32,34,41,1) 90%, rgba(244,180,0,1) 10%);
 }
 
 .green {
-    background: linear-gradient(0deg, rgba(32,34,41,1) 50%, rgba(15,157,88,1) 50%);
+    background: linear-gradient(0deg, rgba(32,34,41,1) 90%, rgba(15,157,88,1) 10%);
 }
 
 .black {
-    background: linear-gradient(0deg, rgba(32,34,41,1) 50%, rgba(0,0,0,1) 50%);
+    background: linear-gradient(0deg, rgba(32,34,41,1) 90%, rgba(0,0,0,1) 10%);
 }
 
 .grey {
-    background: linear-gradient(0deg, rgba(32,34,41,1) 50%, rgba(108,128,164,1) 50%);
+    background: linear-gradient(0deg, rgba(32,34,41,1) 90%, rgba(108,128,164,1) 10%);
 }
 
 .gold {
-    background: linear-gradient(0deg, rgba(40,43,51,1) 50%, rgba(204,182,94,1) 50%);
+    background: linear-gradient(0deg, rgba(40,43,51,1) 90%, rgba(204,182,94,1) 10%);
 }
 
 .text-green {
