--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@
     --cardfont-color: #b9bac3;
     --bg-color: #17191f;
     --heading-color: #818cab;
-    --box-shadow: 0 6px 8px rgba(102, 119, 136, .03), 0 1px 2px rgba(102, 119, 136, .3);
+    --box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .12), 0 1px 2px 0 rgba(0, 0, 0, .24);
 }
 
 [data-emoji] {
