--- a/timeline.css
+++ b/timeline.css
@@ -304,7 +304,7 @@ Patreon
       padding: .5rem 1.5rem;
       text-align: center;
       box-shadow: inset 0px 0px 0px 3px rgba(15, 157, 88, 1);
-      background-color: var(--card-color);
+      background-color: #ffffff;
       color: #0F9D58;
       border-radius: 5px;
       top: 50%;
