--- a/project.css
+++ b/project.css
@@ -172,7 +172,7 @@ small {
 }
 
 .modal-close {
-    color: #aaa;
+    color: #6f6f6f;
     line-height: 50px;
     font-size: 80%;
     position: absolute;
@@ -181,10 +181,13 @@ small {
     top: 0;
     width: 70px;
     text-decoration: none;
+    transition: 0.3s;
 }
 
 .modal-close:hover {
-    color: black;
+    color: #aaa;
+    text-decoration: none;
+    transition: 0.3s;
 }
 
 @media screen and (max-width: 560px) {
@@ -362,7 +365,7 @@ small {
     }
 
     .modal-close {
-        color: #aaa;
+        color: #6f6f6f;
         line-height: 50px;
         font-size: 80%;
         position: absolute;
@@ -371,9 +374,12 @@ small {
         top: 0;
         width: 70px;
         text-decoration: none;
+        transition: 0.3s;
     }
-
+    
     .modal-close:hover {
-        color: black;
+        color: #aaa;
+        text-decoration: none;
+        transition: 0.3s;
     }
 }
